feat(api): try a source before adding it
